--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
         <title>wepsite ku</title>
     </head>
 <body>
-    <h1>Hellow world</h1>
+    <h1>Hellow world qwerty</h1>
 </body>
 </html>
