--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>wepsite ku</title>
+        <title>website ku</title>
     </head>
 <body>
     <h1>Hellow world</h1>
