--- a/form.html
+++ b/form.html
@@ -7,9 +7,15 @@
         <form action="https://www.youtube.com/watch?v=BTodGJB1ckA" method="post">
             <label for="name">Name : </label>
             <input id="name" type="text" />
+
             <br>
+
             <label for="umur">Umur : </label>
             <input id="umur" type="number" min="0" max="100" />
+
+            <br>
+
+            <label>for</label>
             <p><b>Apa warna kesukaan mu? </b></p>
             <select>
                 <option>Merah</option>
